[package]
name = "libshusaku"
version = "0.2.4"
authors = ["Samuel Batissou <samuelbatissou@gmail.com>"]
edition = "2018"

[lib]
name = "libshusaku"
crate_type = ["cdylib"]

[dependencies]
goban = {git = "https://gitlab.com/Sabati/goban.git", branch = "dev"}

[dependencies.pyo3]
version = "0.6.0-alpha.4"
features = ["extension-module"]
