[package]
name = "libgoban"
version = "0.6.0"
authors = ["Samuel Batissou <samuelbatissou@gmail.com>"]
edition = "2018"

[lib]
name = "libgoban"
crate_type = ["cdylib"]

[dependencies]
goban = {git = "https://gitlab.com/Sabati/goban.git", branch = "dev"}

[dependencies.pyo3]
version = "0.8.3"
features = ["extension-module"]

[target.x86_64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]

