[package]
name = "goban"
version = "0.8.0"
authors = ["Samuel Batissou <samuelbatissou@gmail.com>"]
edition = "2018"

[lib]
name = "libgoban"
crate_type = ["cdylib"]

[dependencies]
goban = {git = "https://gitlab.com/Sabati/goban.git", branch = "dev", features = ["thread-safe"]}

[dependencies.pyo3]
version = "0.11.1"
features = ["extension-module"]

[target.x86_64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]

